add routers and controllers. create admin account

--- a/views/partials/createUser.ejs
+++ b/views/partials/createUser.ejs
@@ -1,12 +1,16 @@
   <div class="partial" id="createUserPartial">
       <h1>Sign Up</h1>
       <form action="/sign-up" method="POST">
-          <label for="username">Username</label>
-          <input id="username" name="username" placeholder="username" type="text" autocomplete="username"/>
-          <label for="password">Password</label>
-          <input id="password" name="password" type="password" autocomplete="new-password"/>
-          <label for="passwor-confirm">Confirm Password</label>
-          <input id="password-confirm" name="password-confirm" type="password" autocomplete="new-password"/>
-          <button type="submit">Sign Up</button>
+        <label for="firstName">First name</label>
+        <input type="text" name="firstName" id="firstName">
+        <label for="lastName">Last name</label>
+        <input type="text"  name="lastName" id="lasName" >
+        <label for="username">Username</label>
+        <input id="username" name="username" placeholder="username" type="text" autocomplete="username"/>
+        <label for="password">Password</label>
+        <input id="password" name="password" type="password" autocomplete="new-password"/>
+        <label for="passwordConfirm">Confirm Password</label>
+        <input id="password-confirm" name="passwordConfirm" type="password" autocomplete="new-password"/>
+        <button type="submit">Sign Up</button>
         </form>
     </div>
