--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -6,6 +6,7 @@
             <label for="password">Password</label>
             <input id="password" name="password" type="password" autocomplete="current-password" />
             <button type="submit">Log In</button>
-            <a href="/?createUser=true">Not a member? Sign up</a>
+            <a href="/sign-up">Not a member? Sign up</a>
+            <a href="/messages">Nervous? Read messages here</a>
         </form>
     </div>
