--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,8 @@
 <body>
     <% if( locals.user ){ %>
         <h1>Welcome back, friend.</h1>
+        <a href="">Post a message</a>
+        <a href="">View the message board</a>
     <% } else { %>
         <%- include("partials/" + form) %>
     <% } %>
