--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -1,12 +1,12 @@
     <div class="partial" id="loginPartial">
         <h1>Log in</h1>
-        <form action="/log-in" method="POST">
+        <form action="/" method="POST">
             <label for="username">Username</label>
             <input id="username" name="username" placeholder="username" type="text" autocomplete="username" />
             <label for="password">Password</label>
             <input id="password" name="password" type="password" autocomplete="current-password" />
             <button type="submit">Log In</button>
-            <a href="/sign-up">Not a member? Sign up</a>
-            <a href="/messages">Nervous? Read messages here</a>
         </form>
+        <a href="/sign-up">Not a member? Sign up</a>
+        <a href="/messages">Read messages here</a>
     </div>
