--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,10 +14,10 @@
         <% } else { %>
 
             <a href="">Join the club</a>
-            
+
         <% } %>
-        <a href="">Post a message</a>
-        <a href="">View the message board</a>
+        <!-- <a href="/messages/new">Post a message</a> -->
+        <a href="/messages">View the message board</a>
     <% } else if(locals.form) { %>
         <%- include("partials/" + form) %>
     <% } %>
