--- a/views/partials/createUser.ejs
+++ b/views/partials/createUser.ejs
@@ -13,4 +13,5 @@
         <input id="password-confirm" name="passwordConfirm" type="password" autocomplete="new-password"/>
         <button type="submit">Sign Up</button>
         </form>
+        <a href="/">Already with us? Log in!</a>
     </div>
