display 'signed in as' in messages, style forms as grid. confirm post delete

--- a/views/partials/messagesList.ejs
+++ b/views/partials/messagesList.ejs
@@ -1,12 +1,12 @@
 <% messages.map(message => { %>
     <div class="message">
-        <p><%= message.username %>:</p>
         <h4><%= message.title %></h4>
         <p><%= message.body %></p>
         <p><%= message.date_time %></p>
+        <p>-<%= message.username %></p>
         <% if(user.admin){%>
             <form action="/messages/<%= message.id %>/delete" method="post">
-                <button>Remove Post</button>
+                <button onclick="return confirm('Remove Post?')">Remove Post</button>
             </form>
         <% } %>
     </div>
