--- a/public/styles.css
+++ b/public/styles.css
@@ -5,3 +5,10 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+form{
+    display: grid;
+}
+form button {
+    width: max-content;
+}
+
