--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -7,6 +7,7 @@
     <title>Messages</title>
 </head>
 <body>
+    <p>Signed in as: <%= user.username %></p>
     <% if(messages.length > 0){ %>
         <h1>Messages</h1>
         <div class="messages">
