--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -25,7 +25,7 @@
         <% if(isGuest) {%>
             <a href="<%= membershipAction.link %>"><%= membershipAction.text %></a>
         <% }else{ %>
-            <a href="/sign-up">Join us</a>
+            <a href="/join">Join us</a>
       <% } %>
     <% } %>
     <% if(!isGuest){ %>
