--- a/views/partials/newMessage.ejs
+++ b/views/partials/newMessage.ejs
@@ -2,6 +2,6 @@
     <label for="title">Title</label>
     <input type="text" name="title" id="title">
     <label for="body">Message</label>
-    <textarea name="body" id="message-body"></textarea>
+    <textarea name="body" id="body"></textarea>
     <button>Send</button>
 </form>
