--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -8,6 +8,7 @@
                 <input id="password" name="password" type="password" autocomplete="current-password" />
                 <button type="submit">Log In</button>
             </form>
+            <%- include("errors") %>
         </div>
         <div class="non-member-access">
             <h4>Not a member?</h4>
