--- a/views/partials/messagesList.ejs
+++ b/views/partials/messagesList.ejs
@@ -1,6 +1,6 @@
 <% messages.map(message => { %>
-    <div class="message">
-        <h4><%= message.title %></h4>
+    <div class="message mouseable">
+        <h3><%= message.title %></h3>
         <p><%= message.body %></p>
         <p><%= message.date_time %></p>
         <p>-<%= message.username %></p>
