--- a/public/styles.css
+++ b/public/styles.css
@@ -2,7 +2,88 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Helvetica, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body{
+    width: 80vw;
+    height: 99vh;
+    padding: 0;
+    margin: 0;
+    justify-items: center;
+    align-items: center;
+    place-content: center;
+}
+
+.partial{
+    background-color: rgb(58, 255, 58);
+    border-radius: 3%;
+    text-align: center;
+    align-content: center;
+    padding: 3em;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.partial h1 {
+    background-color: rgb(255, 128, 128);
+    text-align: center;
+    align-content: center;
+    padding: 0.5em;
+}
+
+.mouseable{
+    transition: box-shadow .7s ease-in-out;
+    box-shadow: none;
+}
+
+.mouseable:hover{
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 28px, rgba(0, 0, 0, 0.22) 0px 15px 32px;
+}
+
+.member-access, .messages{
+    background-color: rgb(255, 255, 109);
+    padding: 2em;
+}
+.non-member-access, .sign-up, .new-message, .controls{
+    background-color: rgb(157, 157, 255);
+    padding: 2em;
+    align-content: space-between;
+    text-align: center;
+}
+
+.sign-up{
+    grid-column: 2;
+    word-wrap: break-word;
+    word-break: keep-all;
+    height: min-content;
+}
+
+.user-info{
+    background-color: rgb(255, 221, 159);
+    text-align: center;
+    align-content: center;
+    padding: 0 1rem ;
+}
+
+.new-message{
+    height:min-content;
+    align-self: center;
+}
+
+.messages{
+    grid-column: 1;
+    display: grid;
+    gap: 10px;
+    overflow-y: scroll;
+}
+
+
+.message{
+    padding: 1rem;
+    margin: 1em;
+    background-color: rgb(255, 255, 255);
+    border-radius: 1em;
+    box-shadow: rgba(0, 0, 0, 0.15) -1.95px -1.95px 2.6px;
 }
 
 form{
@@ -13,3 +94,18 @@ form button {
     width: max-content;
 }
 
+button{
+    padding: 8px 10px;
+    border: none;
+    /* border-radius: 5px; */
+    background-color: rgb(199, 112, 239);
+}
+button:hover{
+    background-color: rgb(240,112,240);
+}
+
+.partial{
+    display: grid;
+    grid-template-columns: repeat(2,auto);
+    gap: 2rem;
+}
