--- a/views/partials/join.ejs
+++ b/views/partials/join.ejs
@@ -1,7 +1,9 @@
-<form action="/join" method="post">
-    <div>Who brought you here?</div>
-    <label for="secret-answer">Secret Answer:</label>
-    <input type="text" name="secret-answer">
-    <button type="submit">Submit</button>
-</form>
-<a href="./">Back</a>
+<div class="member-access mouseable">
+    <form action="/join" method="post">
+        <div>Who brought you here?</div>
+        <label for="secret-answer">Secret Answer:</label>
+        <input type="text" name="secret-answer">
+        <button type="submit">Submit</button>
+    </form>
+</div>
+    <a href="./" class="controls mouseable">Back</a>
