make h1 on login mouseable. change main font color

--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -1,4 +1,4 @@
-<h1> Members Only Log in</h1>
+<h1 class="mouseable"> Members Only Log in</h1>
 <div class="member-access mouseable">
     <form action="/" method="POST">
         <label for="username">Username</label>
