--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     font-family: Helvetica, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color:rgba(0, 0, 0, 0.724)
 }
 
 body{
