--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -41,5 +41,18 @@
     </div>
     </div>
     </div>
+    <script>
+    let items = document.querySelectorAll('.mouseable');
+    let prevNum = Math.floor(Math.random() * items.length)
+    let prevItem;
+    setInterval(()=>{
+        if(prevItem){
+            prevItem.classList.toggle("randomPop");
+        }
+        prevItem = items[prevNum]
+        prevItem.classList.toggle("randomPop");
+        prevNum = Math.floor(Math.random() * items.length)
+    }, 1000)
+</script>
 </body>
 </html>
