clean up error page

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title><%= error %></title>
+    <title>Uh oh!</title>
 </head>
 <body>
-    <h1>Uh oh!</h1>
-    <div><%= error %></div>
+    <h1>Uh oh! <%= code %></h1>
+    <div><%= error %> not found</div>
     <a href="/">Go Back</a>
 </body>
 </html>
