fix typo in messagesList

--- a/views/partials/messagesList.ejs
+++ b/views/partials/messagesList.ejs
@@ -19,7 +19,7 @@
                 }
             </script>
         <% }else{ %>
-           <p> <%= messages.body %></p>
+           <p> <%= message.body %></p>
         <% } %>
         <p><%= message.date_time %></p>
         <p>-<%= message.username %></p>
